feat: integrate grievance analytics microservice in .NET and connect via Spring Boot
Created GrievanceAnalyticsService in .NET Core with Swagger UI at /swagger

Added DotNetApiClient.java in Spring Boot to consume .NET analytics endpoints

Updated controller and service layers to forward grievance payloads

Ensured DTO consistency and JSON serialization across platforms

Verified API sync and documentation via Swagger on localhost:5120